javafx and formui init